Replacing get(0) with getFirst()