@@ -43,7 +43,7 @@ class BeginningOfSeasonScheduleProcessorIntegrationTest extends NATCServiceInteg
             final List<Schedule> scheduleList = scheduleRepository.findAll();
 
             assertEquals(1, scheduleList.size());
-            assertEquals(ScheduleStatus.COMPLETED.getValue(), scheduleList.get(0).getStatus());
+            assertEquals(ScheduleStatus.COMPLETED.getValue(), scheduleList.getFirst().getStatus());
         }
     }
 }
