@@ -39,7 +39,7 @@ class InjurySearchServiceIntegrationTest extends NATCServiceIntegrationTest {
 
             assertEquals(1, result.size());
 
-            final InjuryResponse response = result.get(0);
+            final InjuryResponse response = result.getFirst();
 
             assertEquals(injury.getGameId(), response.getGameId());
             assertEquals(injury.getPlayerId(), response.getPlayerId());
@@ -60,7 +60,7 @@ class InjurySearchServiceIntegrationTest extends NATCServiceIntegrationTest {
 
             assertEquals(1, result.size());
 
-            final InjuryResponse response = result.get(0);
+            final InjuryResponse response = result.getFirst();
 
             assertEquals(injury.getGameId(), response.getGameId());
             assertEquals(injury.getPlayerId(), response.getPlayerId());
