@@ -46,7 +46,7 @@ class ScheduleSearchServiceIntegrationTest extends NATCServiceIntegrationTest {
 
             assertEquals(1, result.size());
 
-            final ScheduleResponse response = result.get(0);
+            final ScheduleResponse response = result.getFirst();
 
             assertEquals(schedule.getYear(), response.getYear());
             assertEquals(schedule.getSequence(), response.getSequence());
@@ -71,7 +71,7 @@ class ScheduleSearchServiceIntegrationTest extends NATCServiceIntegrationTest {
 
             assertEquals(1, result.size());
 
-            final ScheduleResponse response = result.get(0);
+            final ScheduleResponse response = result.getFirst();
 
             assertNotNull(response.getYear());
             assertNotNull(response.getSequence());
