@@ -289,7 +289,7 @@ class TeamManagerDraftServiceTest {
             );
 
             when(teamRepository.findOne(any()))
-                    .thenReturn(Optional.of(previousYearTeams.get(0)))
+                    .thenReturn(Optional.of(previousYearTeams.getFirst()))
                     .thenReturn(Optional.of(previousYearTeams.get(1)))
                     .thenReturn(Optional.of(previousYearTeams.get(2)))
                     .thenReturn(Optional.of(previousYearTeams.get(3)))
@@ -328,7 +328,7 @@ class TeamManagerDraftServiceTest {
                 );
 
                 when(teamRepository.findOne(any()))
-                        .thenReturn(Optional.of(previousYearTeams.get(0)))
+                        .thenReturn(Optional.of(previousYearTeams.getFirst()))
                         .thenReturn(Optional.of(previousYearTeams.get(1)))
                         .thenReturn(Optional.of(previousYearTeams.get(2)))
                         .thenReturn(Optional.of(previousYearTeams.get(3)))
@@ -357,13 +357,13 @@ class TeamManagerDraftServiceTest {
                 );
 
                 when(teamRepository.findOne(any()))
-                        .thenReturn(Optional.of(previousYearTeams.get(0)))
+                        .thenReturn(Optional.of(previousYearTeams.getFirst()))
                         .thenReturn(Optional.of(previousYearTeams.get(1)));
 
                 // Team 2 should be sorted to first position
-                when(teamComparator.compare(previousYearTeams.get(1), previousYearTeams.get(0))).thenReturn(-1);
+                when(teamComparator.compare(previousYearTeams.get(1), previousYearTeams.getFirst())).thenReturn(-1);
 
-                final Manager bestManager = managers.get(0);
+                final Manager bestManager = managers.getFirst();
 
                 teamManagerDraftService.assignManagersToTeams(teams, managers);
 
@@ -388,13 +388,13 @@ class TeamManagerDraftServiceTest {
                 );
 
                 when(teamRepository.findOne(any()))
-                        .thenReturn(Optional.of(previousYearTeams.get(0)))
+                        .thenReturn(Optional.of(previousYearTeams.getFirst()))
                         .thenReturn(Optional.of(previousYearTeams.get(1)));
 
                 // Team 2 should be sorted to first position
-                when(teamComparator.compare(previousYearTeams.get(1), previousYearTeams.get(0))).thenReturn(1);
+                when(teamComparator.compare(previousYearTeams.get(1), previousYearTeams.getFirst())).thenReturn(1);
 
-                final Manager bestManager = managers.get(0);
+                final Manager bestManager = managers.getFirst();
 
                 teamManagerDraftService.assignManagersToTeams(teams, managers);
 
